--- a/asset/css/main.css
+++ b/asset/css/main.css
@@ -1,3 +1,9 @@
+/*修改默认字体*/
+body, button, input, select, textarea, h1, h2, h3, h4, h5, h6 {
+    font-family: Microsoft YaHei, '宋体', Tahoma, Helvetica, Arial,
+    "\5b8b\4f53", sans-serif;
+}
+
 /*菜单栏*/
 .sidebar-none .main-sidebar {
     width: 0;
